# cc_qMapit_IO_plugin

./: CMakeLists.txt  README.md  info.json  qMapitIO.cpp  qMapitIO.h  qMapitIO.qrc
src/: CMakeLists.txt  IcmFilter.cpp  IcmFilter.h  MapitIO.cpp  MapitIO.h
